# MR-AI-Agent

./: README.md
mr_agents/: test_env.py
mr_agents/agents/: .env  steps_to_run
mr_agents/agents/analytic/: analyticAi.py
mr_agents/agents/codeic_AI/: codeAi.py
mr_agents/agents/research/: main.py
mr_agents/myenv/: pyvenv.cfg
mr_agents/myenv/Scripts/: activate  activate.bat
mr_ai_agent/: README.md  pyproject.toml  report.md
mr_ai_agent/knowledge/: user_preference.txt
mr_ai_agent/src/mr_ai_agent/: crew.py  main.py
mr_ai_agent/src/mr_ai_agent/config/: agents.yaml  tasks.yaml
