[project]
name = "mr_ai_agent"
version = "0.1.0"
description = "MR_AI_Agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai]",
]

[project.scripts]
mr_ai_agent = "mr_ai_agent.main:run"
run_crew = "mr_ai_agent.main:run"
train = "mr_ai_agent.main:train"
replay = "mr_ai_agent.main:replay"
test = "mr_ai_agent.main:test"
run_with_trigger = "mr_ai_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
